# deepxde

./: .codacy.yml  .gitignore  .prospector.yaml  .pylintrc  .readthedocs.yaml  .readthedocs.yml  .travis.yml  CITATION.cff  Eulerbeam.rst  MANIFEST.in  PODMIONet_training.py  README.md  check.sh  heat_conduction_1d_uniform_bar.ipynb  log.txt  pyproject.toml  requirements.txt  requirements_rtd.txt  setup.py  test.py
.github/ISSUE_TEMPLATE/: config.yml
.github/workflows/: build.yml  ci.yml  release.yml
adaptive_loss_weight_example/: manual_dynamic_loss_weights.py  steps_2_change_code.md
deepxde/: __init__.py  array_ops.py  backend.py  boundary_conditions.py  callbacks.py  config.py  display.py  external_optimizer.py  fractional.py  gradients.py  initial_condition.py  losses.py  math_ops.py  metrics.py  model.py  model_backup.py  postprocessing.py  real.py  train.py  types.py  utils.py
deepxde/backend/: __init__.py  backend.py  install_backend.py  set_default_backend.py  utils.py
docker/: Dockerfile  requirements.txt
docs/: Makefile  conf.py  index.rst  make.bat  requirements.txt
examples/: 1D Reaction Diffusion.ipynb  1DReactionDiffusionInverse.py  Beltrami_flow.py  Burgers.py  Burgers_RAR.py  Euler_beam.py  Helmholtz_Dirichlet_2d.py  Kovasznay_flow.py  Laplace_disk.py  Lorenz_inverse.ipynb  Lorenz_inverse.py  Lorenz_inverse_Colab.ipynb  Lorenz_inverse_colab.ipynb  Lorenz_inverse_forced.ipynb  Lorenz_inverse_forced_Colab.ipynb  Lorenz_inverse_forced_Colab.py  Lorenz_inverse_forced_colab.ipynb  Lotka_Volterra.ipynb  Lotka_Volterra.py  Lotka_Volterra_Colab.ipynb  Makefile  Poisson_1d.py  Poisson_Dirichlet_1d.py  Poisson_Lshape.py  Poisson_Neumann_1d.py  Poisson_Robin_1d.py  Poisson_multiscale_1d.py  Poisson_periodic_1d.py  Schrodinger_Colab.ipynb  Schroedinger_forward_Colab.ipynb  Volterra_IDE.py  dataset.py  dataset.test  diffusion_1d.py  diffusion_1d_dynamicSample.py  diffusion_1d_exactBC.py  diffusion_1d_inverse.py  diffusion_1d_resample.py  diffusion_1d_reverse.py  diffusion_reaction.py  (+22 more)
sciconet/: __init__.py  array_ops.py  boundary_conditions.py  callbacks.py  config.py  data.py  display.py  fnn.py  fractional.py  geometry.py  initial_condition.py  losses.py  math_ops.py  metrics.py  model.py  postprocessing.py  real.py  train.py  utils.py
scripts/: paddle_Helmholtz_Neumann_2d_hole_dynamic.sh  paddle_Helmholtz_Sound_hard_ABC_2d_dynamic.sh  paddle_Lorenz_inverse_dynamic.sh  paddle_Lotka_Volterra_dynamic.sh  paddle_Navier_Stokes_inverse_dynamic.sh  paddle_Poisson_Dirichlet_1d_dynamic.sh  paddle_Poisson_Neumann_1d_dynamic.sh  paddle_Poisson_Robin_1d_dynamic.sh  paddle_Poisson_multiscale_1d_dynamic.sh  paddle_Poisson_periodic_1d_dynamic.sh  paddle_brinkman_forchheimer_dynamic.sh  paddle_diffusion_1d_dynamic.sh  paddle_diffusion_1d_inverse_dynamic.sh  paddle_diffusion_1d_resample_dynamic.sh  paddle_diffusion_reaction_dynamic.sh  paddle_elliptic_inverse_field_dynamic.sh  paddle_fractional_Poisson_1d_dynamic.sh  paddle_fractional_Poisson_1d_inverse_dynamic.sh  paddle_fractional_Poisson_2d_dynamic.sh  paddle_fractional_Poisson_2d_inverse_dynamic.sh  paddle_fractional_Poisson_3d_dynamic.sh  paddle_fractional_diffusion_1d_dynamic.sh  paddle_ide_dynamic.sh  paddle_ode_2nd_dynamic.sh  paddle_ode_system_dynamic.sh  paddle_reaction_inverse_dynamic.sh  paddle_wave_1d_dynamic.sh
(+671 files in other folders)
